syntax = "proto3";

package connectApp;
option go_package = "gos_rpc_proto";

service RouteConnectGame {
    // A Bidirectional streaming RPC.
    rpc AgentStream(stream RouteMsg) returns (stream RouteMsg) {}

    rpc DeployScene(DeploySceneRequest) returns (DeploySceneReply) {}
}

message RouteMsg {
    string accountId = 1;
    bytes data = 2;
}

message RegisterMsg {
    string accountId = 1;
    string connectAppId = 2;
    bool isRegister = 3;
}

message RegisterReply {
    bool status = 1;
}

message DeploySceneRequest {
    string sceneId = 1;
}

message DeploySceneReply {
    bool success = 1;
}
